--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <img src="RClogo.png" alt="Logo" width="100" height="100" style="float:left; margin-right: 20px;">
+        <img src="ImagenesHTML/RClogo.png" alt="Logo" width="100" height="100" style="float:left; margin-right: 20px;">
         <h1>Radiocontrol Hotz</h1>
         <h3>Aviones - Drones - Helicopteros - Lanchas - Autos - Accesorios - Partes - Servicios - Mantenimiento - Radiocontroles</h3>
     </header>
