--- a/Traxxas_acce.html
+++ b/Traxxas_acce.html
@@ -16,7 +16,7 @@
          <div class="catalog0">
             <div class="product">
                 <img src="ImagenesHTML/lipocargador2s.webp" alt="lipoycargador2s">
-                <h2>Cargador y Bateria Lipo 7.4v 3000mah #2011</h2>
+                <h2>Cargador y Bateria Lipo 7.4v 3000mah #2101</h2>
                 <p>El complemento perfecto para tu traxxas </p>
             <p> (Incluye 1 bateria lipo iD 3000mah 7.4v 20c y un cargador EzPeakPlus iD sencillo)</p>
                 <p class="price">$2,560</p>
@@ -24,7 +24,7 @@
 
                  <div class="product">
                 <img src="ImagenesHTML/5800lipo2s.webp" alt="lipoycargador2s">
-                <h2>Cargador y Bateria Lipo 7.4v 5800mah #2012</h2>
+                <h2>Cargador y Bateria Lipo 7.4v 5800mah #2102</h2>
                 <p>Esta lipo de 7.4v de 5800mah te permitira poder disfrutar de tu traxxas por una mayor cantidad de tiempo junto a su cargador EzPeak iDplus </p>
             <p> (Incluye 1 bateria lipo iD 5800mah 7.4v 20c y un cargador EzPeakPlus iD sencillo)</p>
                 <p class="price">$3,760</p>
@@ -32,7 +32,7 @@
 
                   <div class="product">
                 <img src="ImagenesHTML/3s5000.jpg" alt="lipoycargador2s">
-                <h2>Cargador y Bateria Lipo 11.1v 5000mah #2013</h2>
+                <h2>Cargador y Bateria Lipo 11.1v 5000mah #2104</h2>
                 <p>Esta complemento te permitira exprimir el potencias de tu traxxas y a su vez te dara mayor cantidad de tiempo con el cual podras correr aun mejor tu vehiculo </p>
             <p> (Incluye 1 bateria lipo iD 5000mah 11.1v 20c y un cargador EzPeakPlus iD sencillo)</p>
                 <p class="price">$3,979</p>
@@ -40,7 +40,7 @@
                   <div class="product">
 
                 <img src="ImagenesHTML/3s1800lipo.jpeg" alt="lipoycargador2s">
-                <h2>Bateria Lipo 11.1v 1400mah #2021</h2>
+                <h2>Bateria Lipo 11.1v 1400mah #2201</h2>
                 <p>Esta complemento es perfectos para traxxas de cortos recorridos y altas potencias, especial para aquellos que aman el drag </p>
             <p> (Incluye 1 bateria lipo iD 1400mah 11.1v)</p>
                 <p class="price">$1,968</p>
@@ -48,12 +48,35 @@
 
                <div class="product">
                 <img src="ImagenesHTML/lipo2s750.webp" alt="lipoycargador2s">
-                <h2>Bateria Lipo 7.4v 750mah #2021</h2>
+                <h2>Bateria Lipo 7.4v 750mah #2202</h2>
                 <p>Esta complemento esta especialmente creado para aquellos que prefieren los TRXm </p>
             <p> (Incluye 1 bateria Lipo 7.4v 750mah)</p>
                 <p class="price">$989</p>
                 </div>
+             
+             <div class="product">
+                <img src="ImagenesHTML/nihm84_3000.jpg" alt="lipoycargador2s">
+                <h2> Cargador y NiHM 8.4v 3000mah #2104</h2>
+                <p>Esta complemento es perfecto si comienzas a incursionar en mundo de los traxxas </p>
+            <p> (Incluye 1 bateria NiHM 8.4v 3000mah)</p>
+                <p class="price">$2,456</p>
+                </div>
+            <div class="product">
+                
+              <img src="ImagenesHTML/usb_5000_3s.jpg" alt="lipoycargador2s">
+                <h2>Cargador USB-C y Bateria Lipo 11.1v 5000mah #2104</h2>
+                <p>Con el cargador EzPeak con puerto de carga USB-C ya no tendras que preocuparte por tener que ahorrar energia, ahora podras cargar y conectate donde quieras con su puerto USB-C </p>
+            <p> (Incluye 1 bateria lipo iD 5000mah 11.1v 20c y un cargador EzPeakPlus iD sencillo)</p>
+                <p class="price">$3,560</p>
+                </div>
 
+        <div class="product">
+            <img src="ImagenesHTML/74_7600.webp" alt="lipoycargador2s">
+                <h2>Cargador DUAL y Bateria Lipo 7.4v 7600mah #2104</h2>
+                <p>Esta complemento te permitira disfrutar de tu traxxas por un largo tiempo con el cual podras disfrutal aun mas de tu traxxas </p>
+            <p> (Incluye 2 bateria lipo iD 7.4v 7600mah y un cargador EzPeakPlus iD DUAL)</p>
+                <p class="price">$7,200</p>
+                </div>
     </main>
     </main>
 </body>
