--- a/Traxxas_acce.html
+++ b/Traxxas_acce.html
@@ -56,7 +56,7 @@
              
              <div class="product">
                 <img src="ImagenesHTML/nihm84_3000.jpg" alt="lipoycargador2s">
-                <h2> Cargador y NiHM 8.4v 3000mah #2104</h2>
+                <h2> Cargador y NiHM 8.4v 3000mah #2105</h2>
                 <p>Esta complemento es perfecto si comienzas a incursionar en mundo de los traxxas </p>
             <p> (Incluye 1 bateria NiHM 8.4v 3000mah)</p>
                 <p class="price">$2,456</p>
@@ -64,15 +64,15 @@
             <div class="product">
                 
               <img src="ImagenesHTML/usb_5000_3s.jpg" alt="lipoycargador2s">
-                <h2>Cargador USB-C y Bateria Lipo 11.1v 5000mah #2104</h2>
+                <h2>Cargador USB-C y Bateria Lipo 11.1v 5000mah #2106</h2>
                 <p>Con el cargador EzPeak con puerto de carga USB-C ya no tendras que preocuparte por tener que ahorrar energia, ahora podras cargar y conectate donde quieras con su puerto USB-C </p>
             <p> (Incluye 1 bateria lipo iD 5000mah 11.1v 20c y un cargador EzPeakPlus iD sencillo)</p>
                 <p class="price">$3,560</p>
                 </div>
 
         <div class="product">
-            <img src="ImagenesHTML/74_7600.webp" alt="lipoycargador2s">
-                <h2>Cargador DUAL y Bateria Lipo 7.4v 7600mah #2104</h2>
+            <img src="ImagenesHTML/dual74_7600.webp" alt="lipoycargador2s">
+                <h2>Cargador DUAL y Bateria Lipo 7.4v 7600mah #2107</h2>
                 <p>Esta complemento te permitira disfrutar de tu traxxas por un largo tiempo con el cual podras disfrutal aun mas de tu traxxas </p>
             <p> (Incluye 2 bateria lipo iD 7.4v 7600mah y un cargador EzPeakPlus iD DUAL)</p>
                 <p class="price">$7,200</p>
