--- a/Traxxas_acce.html
+++ b/Traxxas_acce.html
@@ -49,7 +49,8 @@
                    <p> "NUEVO" Heavy-duty slipper clutch</p>
                 (Baterias y cargador se venden por separado)</p>
                 <p class="price">$11,079</p>
-        
+                 
+<a href="traxxas_accex.html"> Aqui puedes encontrar accesorios y complementos para tus vehiculos traxxas </a>
     </main>
     </main>
 </body>
