--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <main>
        
     </main>
-     <a href="Traxxas_acce.html"> Aqui puedes encontrar accesorios y complementos para tus vehiculos traxxas </a>
+     <a href="Traxxas_acce.html"> Aqui puedes conocer todo acerca de nuestros vehiculos traxxas </a>
     <script src="scripts.js"></script>
 </body>
 </html>
