--- a/Traxxas.html
+++ b/Traxxas.html
@@ -49,6 +49,7 @@
                    <p> "NUEVO" Heavy-duty slipper clutch</p>
                 (Baterias y cargador se venden por separado)</p>
                 <p class="price">$11,079</p>
+             </div>
                  
 <a href="traxxas_accex.html"> Aqui puedes encontrar accesorios y complementos para tus vehiculos traxxas </a>
     </main>
