--- a/Traxxas.html
+++ b/Traxxas.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <a href="index.html">
-        <img src="RCLogo.png" alt="Logo" width="100" height="100" style="float:left; margin-right: 20px;">
+        <img src="RCLogo.png" alt="Logo" width="100" height="100" style="float:left; margin-right: 20px;">  </a>
         <h1>Radiocontrol Hotz</h1>
         <h3>Aviones - Drones - Helicopteros - Lanchas - Autos - Accesorios - Partes - Servicios - Mantenimiento - Radiocontroles</h3></head>
     </header>
