--- a/Traxxas.html
+++ b/Traxxas.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <a href="index.html"
+        <a href="index.html" >
         <img src="RCLogo.png" alt="Logo" width="100" height="100" style="float:left; margin-right: 20px;">
         </a>
         <h1>Radiocontrol Hotz</h1>
