--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <header>
-        <a href="index.html" </a>
+        <a href="index.html"
         <img src="ImagenesHTML/RCLogo.png" alt="Logo" width="100" height="100" style="float:left; margin-right: 20px;">
-            </a>
+        </a>
         <h1>Radiocontrol Hotz</h1>
         <h3>Aviones - Drones - Helicopteros - Lanchas - Autos - Accesorios - Partes - Servicios - Mantenimiento - Radiocontroles</h3>
     </header>
