--- a/Traxxas.html
+++ b/Traxxas.html
@@ -53,7 +53,7 @@
                 <p class="price">$11,079</p>
              </div>
                  
-<a href="traxxas_accex"> Aqui puedes encontrar accesorios y complementos para tus vehiculos traxxas </a>
+<a href="traxxas_accex.html"> Aqui puedes encontrar accesorios y complementos para tus vehiculos traxxas </a>
     </main>
     </main>
 </body>
