--- a/index.html
+++ b/index.html
@@ -15,9 +15,15 @@
         <h3>Aviones - Drones - Helicopteros - Lanchas - Autos - Accesorios - Partes - Servicios - Mantenimiento - Radiocontroles</h3>
     </header>
     <main>
-       
+        <div class="catalog">
+            <div class="product">
+            <a href="Traxxas.html"> Aqui puedes conocer todo acerca de nuestros vehiculos traxxas 
+                <img src="ImagenesHTML/Traxxas-logo.png" alt="Traxxas Logo">
+                <h2> Conoce nuestro vehiculos Traxxas </h2>
+                </a>
+              
     </main>
-     <a href="Traxxas.html"> Aqui puedes conocer todo acerca de nuestros vehiculos traxxas </a>
+   
     <script src="scripts.js"></script>
 </body>
 </html>
