--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <main>
         <div class="catalog">
             <div class="product">
-            <a href="Traxxas.html"> Aqui puedes conocer todo acerca de nuestros vehiculos traxxas 
+            <a href="Traxxas.html">
                 <img src="ImagenesHTML/Traxxas-logo.png" alt="Traxxas Logo">
                 <h2> Conoce nuestro vehiculos Traxxas </h2>
                 </a>
