--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="catalog">
             <div class="product">
             <a href="Traxxas.html">
-                <img src="ImagenesHTML/Traxxas-logo.png" alt="Traxxas Logo">
+                <img src="ImagenesHTML/Traxxas_logo.jpg" alt="Traxxas Logo">
                 <h2> Conoce nuestro vehiculos Traxxas </h2>
                 </a>
               
