--- a/Traxxas.html
+++ b/Traxxas.html
@@ -52,8 +52,11 @@
                 (Baterias y cargador se venden por separado)</p>
                 <p class="price">$11,079</p>
              </div>
-                 
-<a href="traxxas_accex.html"> Aqui puedes encontrar accesorios y complementos para tus vehiculos traxxas </a>
+            
+            <div class="product">
+                <a href="traxxas_accex.html"> 
+                 <img src="ImagenesHTML/Traxxas-logo.png" alt="Traxxas Logo">
+                <h2> Aqui puedes encontrar accesorios y complementos para tus vehiculos traxxas </h2> </a>
     </main>
     </main>
 </body>
