--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
                 <img src="ImagenesHTML/traxxas_logo.jpg" alt="Traxxas Logo">
                 <h2> Conoce nuestro vehiculos Traxxas </h2>
                 </a>
-              
+              </div>
+        </div>
     </main>
    
     <script src="scripts.js"></script>
