--- a/index.html
+++ b/index.html
@@ -23,6 +23,15 @@
                 <h2> Conoce nuestro vehiculos Traxxas </h2>
                 </a>
               </div>
+            
+        <div class="catalog">
+            <div class="product">
+            <a href="Aeromodelismo.html">
+                <img src="ImagenesHTML/yak54.jpg" alt="aerologo">
+                <h2> Visita nuestros diversos modelos </h2>
+                </a>
+              </div>
+
         </div>
     </main>
    
