--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div class="product">
             <a href="Aeromodelismo.html">
                 <img src="ImagenesHTML/yak54.jpg" alt="aerologo">
-                <h2> Visita nuestros diversos modelos </h2>
+                <h2> Visita nuestros diversos aeromodelos </h2>
                 </a>
               </div>
 
