--- a/index.html
+++ b/index.html
@@ -19,9 +19,8 @@
         <div class="catalog">
             <div class="product">
             <a href="Traxxas.html">
-                <img src="ImagenesHTML/traxxas_logo.jpg" alt="Traxxas Logo">
+                <img src="ImagenesHTML/traxxas_logo.jpg" alt="Traxxas Logo"> </a>
                 <h2> Conoce nuestro vehiculos Traxxas </h2>
-                </a>
               </div>
             
         <div class="catalog">
