--- a/index.html
+++ b/index.html
@@ -32,6 +32,15 @@
                 <h2> Visita nuestros diversos aeromodelos </h2>
               </div>
              </a>
+    <div class="catalog">
+         <a href="Contactanos.html">
+            <div class="product">
+                <img src="ImagenesHTML/wpp_logo" alt="wpplogo">
+                <h2> <p> Comunicate y contactanos al +52 833-280-1590 </p>
+                     <p> Atendemos a toda la republica Mexicana </p>
+                <h2>
+              </div>
+             </a>
 
         </div>
     </main>
