--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <div class="catalog">
          <a href="Contactanos.html">
             <div class="product">
-                <img src="ImagenesHTML/wpp_logo" alt="wpplogo">
+                <img src="ImagenesHTML/wpp_logo" alt="wpplogo.png">
                 <h2> <p> Comunicate y contactanos al +52 833-280-1590 </p>
                      <p> Atendemos a toda la republica Mexicana </p>
                 <h2>
