--- a/Aeromodelismo.html
+++ b/Aeromodelismo.html
@@ -14,9 +14,8 @@
         <h1>Radiocontrol Hotz</h1>
         <h3>Aviones - Drones - Helicopteros - Lanchas - Autos - Accesorios - Partes - Servicios - Mantenimiento - Radiocontroles</h3></head>
     </header>
-        
-    <main>
-        <div class="catalog">
+    <body>
+        <main>
             <a href="Horizon_Hobby.html">
             <div class="product">
                 <img src="ImagenesHTML/HorizonHobbyLogo.jpg" alt="HorizonHobbyLogo">
@@ -31,3 +30,9 @@
                 <h2> Visita nuestra seccion especial aeromodelos Horizon Hobby </h2>
               </div>
                 </a>
+    
+          </div>
+        </main>
+    <script src="scripts.js"></script>
+</body>
+</html>
