--- a/traxxas_accex.html
+++ b/traxxas_accex.html
@@ -13,7 +13,7 @@
         <h1>Radiocontrol Hotz</h1>
         <h3>Aviones - Drones - Helicopteros - Lanchas - Autos - Accesorios - Partes - Servicios - Mantenimiento - Radiocontroles</h3>
     </header>
-<div class="catalog0">
+<div class="catalog">
             <div class="product">
                 <img src="ImagenesHTML/lipocargador2s.webp" alt="lipoycargador2s">
                 <h2>Cargador y Bateria Lipo 7.4v 3000mah #2101</h2>
