--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             
          <a href="Contactanos.html">
             <div class="product">
-                <img src="ImagenesHTML/wpp_logo" alt="wpplogo.png">
+                <img src="ImagenesHTML/wpp_logo.png" alt="wpplogo.png">
                 <h2> <p> Comunicate y contactanos al +52 833-280-1590 </p>
                      <p> Atendemos a toda la republica Mexicana </p>
                 <h2>
