--- a/traxxas_accex.html
+++ b/traxxas_accex.html
@@ -77,3 +77,9 @@
             <p> (Incluye 2 bateria lipo iD 7.4v 7600mah y un cargador EzPeakPlus iD DUAL)</p>
                 <p class="price">$7,200</p>
                 </div>
+</div>
+    </main>
+   
+    <script src="scripts.js"></script>
+</body>
+</html>
