--- a/Traxxas.html
+++ b/Traxxas.html
@@ -57,7 +57,9 @@
                 <a href="traxxas_accex.html"> 
                  <img src="ImagenesHTML/Traxxas-logo.png" alt="Traxxas Logo">
                 <h2> Aqui puedes encontrar accesorios y complementos para tus vehiculos traxxas </h2> </a>
+   </div>
     </main>
-    </main>
+   
+    <script src="scripts.js"></script>
 </body>
 </html>
