--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
     <a href="Contactanos.html">
         <div class="product" style="width: 220px; height: 260px;">
             <img src="ImagenesHTML/wpp_logo.png" alt="wpplogo.png">
-            <h2 style="font-size: 1.2rem;">Comunícate y contáctanos al +52 833-280-1590</h2>
-            <p style="font-size: 0.9rem;">Atendemos a toda la República Mexicana</p>
+            <h2 style="font-size: 1.2rem;">Atendemos a toda la República Mexicana</h2>
+            <p style="font-size: 0.9rem;"> Comunícate y contáctanos al +52 833-280-1590 </p>
         </div>
     </a>
 </div>
