--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <a href="Traxxas.html">
         <div class="product" style="width: 220px; height: 260px;">
             <img src="ImagenesHTML/traxxas_logo.jpg" alt="Traxxas Logo"  style="width: 160px; height: 140px;>
-                <p <h2 style="font-size: 1.2rem;">Conoce nuestro vehículos Traxxas </h2> </p>
+                <p> <h2> style="font-size: 1.2rem;">Conoce nuestro vehículos Traxxas </h2> </p>
         </div>
     </a>
             
