--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
       <div class="catalog">
     <a href="Traxxas.html">
         <div class="product" style="width: 220px; height: 260px;">
-            <img src="ImagenesHTML/traxxas_logo.jpg" alt="Traxxas Logo"  style="width: 160px; height: 140px;>
-                <p> <h2> style="font-size: 1.2rem;">Conoce nuestro vehículos Traxxas </h2> </p>
+            <img src="ImagenesHTML/traxxas_logo.jpg" alt="Traxxas Logo"  style="width: 180px; height: 140px;>
+                <p> </p>
+            <h2> style="font-size: 1.2rem;">Conoce nuestro vehículos Traxxas </h2>
         </div>
     </a>
             
