--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="product" style="width: 220px; height: 260px;">
             <img src="ImagenesHTML/traxxas_logo.jpg" alt="Traxxas Logo"  style="width: 180px; height: 140px;>
                 <p> </p>
-            <h2> style="font-size: 1.2rem;">Conoce nuestro vehículos Traxxas </h2>
+            <h2 style="font-size: 1.2rem;">Conoce nuestro vehículos Traxxas </h2>
         </div>
     </a>
             
