--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
       <div class="catalog">
     <a href="Traxxas.html">
         <div class="product" style="width: 220px; height: 260px;">
-            <img src="ImagenesHTML/traxxas_logo.jpg" alt="Traxxas Logo"  style="width: 180px; height: 140px;>
-            <h2 style="font-size: 1.2rem;">Conoce nuestro vehículos Traxxas</h2>
+            <img src="ImagenesHTML/traxxas_logo.jpg" alt="Traxxas Logo" style="width: 180px; height: 140px; >
+           <h2 style="font-size: 1.2rem;">Visita nuestros diversos aeromodelos</h2>
         </div>
     </a>
             
