--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <a href="Traxxas.html">
         <div class="product" style="width: 220px; height: 260px;">
             <img src="ImagenesHTML/traxxas_logo.jpg" alt="Traxxas Logo" style="width: 180px; height: 140px; >
-           <h2 style="font-size: 1.2rem;">Visita nuestros diversos aeromodelos</h2>
+                 <h2 style="font-size: 1.2rem;">Conoce nuestros vehiculos Traxxas </h2>
         </div>
     </a>
             
