--- a/Traxxas.html
+++ b/Traxxas.html
@@ -15,6 +15,7 @@
         <h3>Aviones - Drones - Helicopteros - Lanchas - Autos - Accesorios - Partes - Servicios - Mantenimiento - Radiocontroles</h3></head>
     </header>
      <main>
+          <a href="index.html" > <p> <-- Volver al incio </p> </a>
         <div class="catalog">
             <div class="product">
                 <img src="ImagenesHTML/Slash2wd.webp" alt="Traxxas Slash 2WD">
@@ -59,5 +60,6 @@
                 <h2> Aqui puedes encontrar accesorios y complementos para tus vehiculos traxxas </h2> </a>
    </div>
     </main>
+     <a href="index.html" > <p> <-- Volver al incio </p> </a>
    
    
