--- a/traxxas_accex.html
+++ b/traxxas_accex.html
@@ -13,9 +13,11 @@
         <h1>Radiocontrol Hotz</h1>
         <h3>Aviones - Drones - Helicopteros - Lanchas - Autos - Accesorios - Partes - Servicios - Mantenimiento - Radiocontroles</h3>
     </header>
+    
      <a href="index.html" > <p> <-- Volver al incio </p> </a>
      <a href="Traxxas.html" > <p> <-- Anterior </p> </a>
-<div class="catalog">
+        
+    <div class="catalog">
 
             <div class="product">
                 <img src="ImagenesHTML/lipocargador2s.webp" alt="lipoycargador2s">
@@ -81,6 +83,7 @@
                 <p class="price">$7,200</p>
                 </div>
 </div>
-    </main>
+     <a href="index.html" > <p> <-- Volver al incio </p> </a>
+     <a href="Traxxas.html" > <p> <-- Anterior </p> </a>
    
    
