--- a/Traxxas.html
+++ b/Traxxas.html
@@ -15,7 +15,7 @@
         <h3>Aviones - Drones - Helicopteros - Lanchas - Autos - Accesorios - Partes - Servicios - Mantenimiento - Radiocontroles</h3></head>
     </header>
             
-    <a href="index.html" > <p> <-- Volver al incio </p> </a>
+    <a href="index.html" > <img src="ImagenesHTML/Volver.png alt="volver"> </a>
     
      <main>
         <div class="catalog">
