--- a/Traxxas.html
+++ b/Traxxas.html
@@ -62,6 +62,6 @@
                 <h2> Aqui puedes encontrar accesorios y complementos para tus vehiculos traxxas </h2> </a>
    </div>
     </main>
-     <a href="index.html" > <p> <-- Volver al incio </p> </a>
+    <a href="index.html" > <img src="ImagenesHTML/Volver.png alt="volver"> </a>
    
    
