--- a/Traxxas.html
+++ b/Traxxas.html
@@ -15,7 +15,8 @@
         <h3>Aviones - Drones - Helicopteros - Lanchas - Autos - Accesorios - Partes - Servicios - Mantenimiento - Radiocontroles</h3></head>
     </header>
             
-    <a href="index.html" > <img src="ImagenesHTML/Volver.png alt="volver"> </a>
+    <a href="index.html"> <img src="ImagenesHTML/Volver.png" alt="volver"> </a>
+
     
      <main>
         <div class="catalog">
@@ -62,6 +63,6 @@
                 <h2> Aqui puedes encontrar accesorios y complementos para tus vehiculos traxxas </h2> </a>
    </div>
     </main>
-    <a href="index.html" > <img src="ImagenesHTML/Volver.png alt="volver"> </a>
+    <a href="index.html"> <img src="ImagenesHTML/Volver.png" alt="volver"> </a>
    
    
