--- a/traxxas_accex.html
+++ b/traxxas_accex.html
@@ -14,8 +14,9 @@
         <h3>Aviones - Drones - Helicopteros - Lanchas - Autos - Accesorios - Partes - Servicios - Mantenimiento - Radiocontroles</h3>
     </header>
     
-     <a href="index.html" > <p> <-- Volver al incio </p> </a>
-     <a href="Traxxas.html" > <p> <-- Anterior </p> </a>
+   <a href="index.html"> <img src="ImagenesHTML/Volver.png" alt="volver"> </a>
+    <a href="index.html"> <img src="ImagenesHTML/Volver anterior.png" alt="volver"> </a>
+   
         
     <div class="catalog">
 
@@ -83,7 +84,7 @@
                 <p class="price">$7,200</p>
                 </div>
 </div>
-     <a href="index.html" > <p> <-- Volver al incio </p> </a>
-     <a href="Traxxas.html" > <p> <-- Anterior </p> </a>
+     <a href="index.html"> <img src="ImagenesHTML/Volver.png" alt="volver"> </a>
+     <a href="index.html"> <img src="ImagenesHTML/Volver anterior.png" alt="volver"> </a>
    
    
