--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </div>
     </a>
             
-    <a href="https://wa.me/528332801590">Contáctanos por WhatsApp  onmousedown="return false;">
+    <a href="https://wa.me/528332801590" onmousedown="return false;">
         <div class="product" style="width: 220px; height: 260px;">
             <img src="ImagenesHTML/wpp_logo.png" alt="wpplogo.png">
             <h2 style="font-size: 1.2rem;">Atendemos a toda la República Mexicana</h2>
