--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </header>
     
       <div class="catalog">
-    <a href="Traxxas.html" onmousedown="return false;">
+    <a href="Traxxas.html" onmousedown="return false;" onmouseup="void(0);">
         <div class="product" style="width: 220px; height: 260px;">
             <img src="ImagenesHTML/traxxas_logo.jpg" alt="Traxxas Logo" style="width: 180px; height: 140px;">
                  <h2 style="font-size: 1.2rem;">Conoce nuestros vehiculos Traxxas </h2>
