--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
         </div>
     </a>
             
-    <a href="Aeromodelismo.html" onmousedown="return false;">
+    <a href="Aeromodelismo.html">
         <div class="product" style="width: 220px; height: 260px;">
             <img src="ImagenesHTML/yak54.jpg" alt="aerologo">
             <h2 style="font-size: 1.2rem;">Visita nuestros diversos aeromodelos</h2>
         </div>
     </a>
             
-    <a href="https://wa.me/528332801590" onmousedown="return false;">
+    <a href="https://wa.me/528332801590">
         <div class="product" style="width: 220px; height: 260px;">
             <img src="ImagenesHTML/wpp_logo.png" alt="wpplogo.png">
             <h2 style="font-size: 1.2rem;">Atendemos a toda la República Mexicana</h2>
