--- a/Aeromodelismo.html
+++ b/Aeromodelismo.html
@@ -17,14 +17,14 @@
     <body>
        <a href="index.html"> <img src="ImagenesHTML/Volver.png" alt="volver"> </a>
          <div class="catalog">
-            <a href="Horizon_Hobby.html" onmousedown="return false;" >
+            <a href="Horizon_Hobby.html" >
             <div class="product">
                 <img src="ImagenesHTML/HorizonHobbyLogo.jpg" alt="HorizonHobbyLogo">
                 <h2> Visita nuestra seccion especial aeromodelos Horizon Hobby </h2>
               </div>
                 </a>
             
-            <a href="spektrum.html" onmousedown="return false;" >
+            <a href="spektrum.html" >
             <div class="product">
                 <img src="ImagenesHTML/traxxas_logo.jpg" alt="HorizonHobbyLogo">
                 <h2> Visita nuestra seccion especial aeromodelos Horizon Hobby </h2>
