--- a/Traxxas.html
+++ b/Traxxas.html
@@ -8,11 +8,11 @@
 </head>
 <body>
     <header>
-        <a href="index.html" >
+        <a href="index.html">
         <img src="RCLogo.png" alt="Logo" width="100" height="100" style="float:left; margin-right: 20px;">
         </a>
         <h1>Radiocontrol Hotz</h1>
-        <h3>Aviones - Drones - Helicopteros - Lanchas - Autos - Accesorios - Partes - Servicios - Mantenimiento - Radiocontroles</h3></head>
+        <h3>Aviones - Drones - Helicópteros - Lanchas - Autos - Accesorios - Partes - Servicios - Mantenimiento - Radiocontroles</h3>
     </header>
             
     <a href="index.html"> <img src="ImagenesHTML/Volver.png" alt="volver"> </a>
@@ -23,46 +23,47 @@
             <div class="product">
                 <img src="ImagenesHTML/Slash2wd.webp" alt="Traxxas Slash 2WD">
                 <h2> Slash 2WD RFT #1011</h2>
-                <p>El Traxxas Slash 2WD alcanza velocidad de hasta +30mph (incluye cargador y bateria)</p>
+                <p>El Traxxas Slash 2WD alcanza velocidad de hasta +30mph (incluye cargador y batería)</p>
                 <p class="price">$7,650</p>
             </div>
             <div class="product">
                 <img src="ImagenesHTML/Slash4x4bl2.webp" alt="Slash 2WD Motor BL-2s 35mph BNR">
                 <h2>Slash 2WD Motor BL-2s #1012</h2>
-                <p>Slash 2WD Motor BL-2s +35mph (Baterias y cargador de vender por separado)</p>
+                <p>Slash 2WD Motor BL-2s +35mph (Baterías y cargador de vender por separado)</p>
                 <p class="price">$7,805</p>
             </div>
             <div class="product">
                 <img src="ImagenesHTML/slash4x4.jpg" alt="Slash 2WD Motor BL-2s 35mph BNR">
                 <h2>Slash 4x4 BL2s 35mph #1013</h2>
-                <p>Slash 4x4 Motor BL-2s +35mph (Baterias y cargador se venden por separado)</p>
+                <p>Slash 4x4 Motor BL-2s +35mph (Baterías y cargador se venden por separado)</p>
                 <p class="price">$9,315</p>
             </div>
             <div class="product">
                 <img src="ImagenesHTML/4x2vxl.webp" alt="Slash 2WD Motor BL-2s 35mph BNR">
                 <h2>Slash 2WD VXL 60mph #1014</h2>
-                <p>Slash 2WD VXL con transmision Magnum272R (Baterias y cargador se venden por separado)</p>
+                <p>Slash 2WD VXL con transmisión Magnum272R (Baterías y cargador se venden por separado)</p>
                 <p class="price">$9,800</p>
             </div>
              <div class="product">
                 <img src="ImagenesHTML/vxltsm.jpg" alt="Slash 2WD Motor BL-2s 35mph BNR">
                 <h2>Slash 4x4 VXL 60mph #1015</h2>
-                <p>Slash 4x4 VXL con transmision Magnum272R cuenta con:
+                <p>Slash 4x4 VXL con transmisión Magnum272R cuenta con:
                     <p> Traxxas Stability Management (TSM)
                     <p> "NUEVO" Pre-pintado ProGraphix® clipless body /n </p>
                     <p>"NUEVO" Heavy-duty suspension arms</p>
                    <p> "NUEVO" Larger heavy-duty driveshafts</p>
                    <p> "NUEVO" Heavy-duty slipper clutch</p>
-                (Baterias y cargador se venden por separado)</p>
+                (Baterías y cargador se venden por separado)</p>
                 <p class="price">$11,079</p>
              </div>
             
             <div class="product">
                 <a href="traxxas_accex.html"> 
                  <img src="ImagenesHTML/Traxxas-logo.png" alt="Traxxas Logo">
-                <h2> Aqui puedes encontrar accesorios y complementos para tus vehiculos traxxas </h2> </a>
-   </div>
+                <h2> Aquí puedes encontrar accesorios y complementos para tus vehículos Traxxas </h2> </a>
+            </div>
+        </div>
     </main>
     <a href="index.html"> <img src="ImagenesHTML/Volver.png" alt="volver"> </a>
-   
-   
+</body>
+</html>
