--- a/drones.html
+++ b/drones.html
@@ -16,9 +16,10 @@
     </header>
     
     <div class="catalog">
-        <a href="Traxxas.html">
-            <div class="product" style="width: 220px; height: 260px;">
-                <img src="ImagenesHTML/traxxas_logo.jpg" alt="Traxxas Logo" style="width: 180px; height: 140px;">
-                <h2 style="font-size: 1.2rem;">Conoce nuestros vehículos Traxxas</h2>
-            </div>
-        </a>
+        <div class="product">
+            <img src="ImagenesHTML/lipocargador2s.webp" alt="lipocargador2s">
+            <h2>Drone EMAX TinyHawk RTF #3001</h2>
+            <p>Tu mejor compañero para volar indoor</p>
+            <p>(Incluye una bateria Lipo 1s 350mah, Radiocontrol y Googles FPV Transporter)</p>
+            <p class="price">$2,560</p>
+        </div>
